Fixed margin on mobile

--- a/resources/style2.css
+++ b/resources/style2.css
@@ -116,7 +116,7 @@ div.sidebar nav a {
 	}
 
 	div.content {
-		margin: 18pt 0.5in !important;
+		margin: 18pt 0.25in !important;
 	}
 
 	div.content h1, div.content h2 {
